syntax = "proto3";

package protos;

service AIModuleAPI {
  rpc Unload(UnloadRequest) returns (UnloadReply) { }
}

message UnloadRequest {
  
}

message UnloadReply {
  
}
